Fixed excess horizontal scrolling on landing page and fixed uneven nav closing button in chat page.

--- a/public/index.css
+++ b/public/index.css
@@ -144,6 +144,8 @@ button:hover, .dropDownBtn:hover {
 @media only screen and (max-width: 520px) {
   body {
     font-size: 1rem;
+    width: 100vw;
+    overflow: hidden;
 
   }
 
@@ -166,11 +168,17 @@ button:hover, .dropDownBtn:hover {
 
   }
 
-  button, .dropDownWrapper {
+  button, .dropDownWrapper, .menuList {
     margin-left: 50%;
     transform: translate(-50%, 0);
     width: 75%;
     left: 0;
+
+  }
+
+  .menuList, .menuList a {
+    box-sizing: border-box;
+    width: 100%;
 
   }
 
