--- a/public/styles.css
+++ b/public/styles.css
@@ -17,7 +17,7 @@ body {
 
 .burgerMenu div {
   width: 100%;
-  height: .2em;
+  height: .21em;
   margin-top: .5em;
   margin-bottom: .5em;
   background: #333;
@@ -31,12 +31,12 @@ body {
 }
 
 .turn2x div:first-child {
-  transform: translateY(.68em) rotate(45deg);
+  transform: translateY(.71em) rotate(45deg);
 
 }
 
 .turn2x div:last-child {
-  transform: translateY(-.68em) rotate(-45deg);
+  transform: translateY(-.71em) rotate(-45deg);
 
 }
 
